<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="20dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/petit_formal_script"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/newsFragement"
        android:name="com.rihanhack.rihannews.layouts.AllNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scrollBar"
        android:layout_below="@+id/toolbar"
        tools:layout="@layout/fragment_all_news" />

    <HorizontalScrollView
        android:id="@+id/scrollBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:scrollbarSize="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/allNews"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="#FFFFFF"
                android:text="@string/all_news"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/education"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="#FFFFFF"
                android:text="@string/education_news"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/entertainment"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="#FFFFFF"
                android:text="@string/entertainment_news"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/health"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="#FFFFFF"
                android:text="@string/health_news"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/sports"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="#FFFFFF"
                android:text="@string/sports_news"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/technology"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#FFFFFF"
                android:text="@string/technology_news"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>