<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsPostDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/newsImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/news_title"
                android:textColor="#304FFE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/newsDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/news_date"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/newsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/news_description"
                android:textColor="#023C4A" />

            <TextView
                android:id="@+id/newSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/news_source"
                android:textColor="#304FFE" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>